<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="512dp"
    android:layout_gravity="center"
    android:background="@color/detail_background"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivinfo"
            android:layout_width="56dip"
            android:layout_height="56dip"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:padding="10dip"
            android:src="@drawable/icon_product_desc" />

        <TextView
            android:id="@+id/subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivinfo"
            android:layout_centerHorizontal="true"
            android:text="@string/product_info_subject" />

        <LinearLayout
            android:id="@+id/info_l"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/subject"
            android:layout_marginTop="8dip"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/info_leftl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/label_title"
                    style="@style/product_decription_style_grey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="5dip"
                    android:text="@string/product_info_title" />

                <TextView
                    android:id="@+id/label_author"
                    style="@style/product_decription_style_grey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="5dip"
                    android:layout_marginTop="5dip"
                    android:text="@string/product_info_author" />
                <TextView
                    android:id="@+id/label_size"
                    style="@style/product_decription_style_grey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="5dip"
                    android:layout_marginTop="5dip"
                    android:text="@string/product_info_size" />

                <TextView
                    android:id="@+id/label_version"
                    style="@style/product_decription_style_grey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="5dip"
                    android:layout_marginTop="5dip"
                    android:text="@string/product_info_version" />

                <TextView
                    android:id="@+id/label_update_time"
                    style="@style/product_decription_style_grey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="5dip"
                    android:layout_marginTop="5dip"
                    android:text="@string/product_info_update_time" />

                <TextView
                    android:id="@+id/label_desc"
                    style="@style/product_decription_style_grey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="5dip"
                    android:layout_marginTop="5dip"
                    android:text="@string/product_info_desc" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/info_rightl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_title"
                    style="@style/product_decription_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:ellipsize="end"
                    android:maxLength="15"
                    android:singleLine="true"
                    android:text="" />

                <TextView
                    android:id="@+id/tv_author"
                    style="@style/product_decription_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="5dip"
                    android:ellipsize="end"
                    android:maxLength="15"
                    android:singleLine="true" />
                <TextView
                    android:id="@+id/tv_size"
                    style="@style/product_decription_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="5dip"
                    android:ellipsize="end"
                    android:maxLength="15"
                    android:singleLine="true"
                    android:text="" />

                <TextView
                    android:id="@+id/tv_version"
                    style="@style/product_decription_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="5dip"
                    android:ellipsize="end"
                    android:maxLength="15"
                    android:singleLine="true" />
                <TextView
                    android:id="@+id/tv_update_time"
                    style="@style/product_decription_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="5dip"
                    android:ellipsize="end"
                    android:maxLength="15"
                    android:singleLine="true" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_desc"
            style="@style/product_decription_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/info_l"
            android:layout_gravity="left"
            android:layout_marginTop="5dip"
            android:maxLines="15" />
    </RelativeLayout>

</LinearLayout>